[project]
name = "thepoemoferorrs"
version = "0.1.0"
description = ""
authors = [
    {name = "beingnodash",email = "chen.xibo@gmail.com"}
]
license = {text = "mit"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "psutil (>=7.0.0,<8.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
